Fix text spacing

--- a/index.less
+++ b/index.less
@@ -92,6 +92,11 @@ body {
       max-height: 400px;
     }
 
+    iframe {
+      width: 645px;
+      height: 400px;
+    }
+
   }
 
   .project-box {
